crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__tests__audit_tab_empty.snap
---
source: crates/clx/src/dashboard/ui/mod.rs
assertion_line: 285
expression: rendered
---
┌ CLX Dashboard ───────────────────────────────────────────────────────────────┐
│ Sessions • Audit Log • Rules • Settings                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Audit Log (0) ───────────────────────────────────────────────────────────────┐
│Time ▼      Decision     Risk     Layer      Command              Session     │
│                                                                              │
│No audit en                                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Detail ──────────────────────────────────────────────────────────────────────┐
│Select a row to view details                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 <TIME> | Refresh <N>s | Sessions: 0 | Commands: 0 | q:quit Tab:switch /:filter
