crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__tests__settings_tab_load_error.snap
---
source: crates/clx/src/dashboard/ui/mod.rs
expression: rendered
---
┌ CLX Dashboard ───────────────────────────────────────────────────────────────┐
│ Sessions • Audit Log • Rules • Settings                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Sections ──────────┐┌ Settings - <CONFIG_PATH>                                
│> Validator         ││Failed to load configuration                            │
│  Context           ││                                                        │
│  LLM               ││Cannot open config file                                 │
│  User Learning     ││                                                        │
│  Logging           ││Editing is disabled. Fix the config file manually or    │
│  Ctx Pressure      ││press [r] to retry.                                     │
│  Sess Recovery     ││                                                        │
│  MCP Tools         ││                                                        │
│  Auto Recall       ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
└────────────────────┘└────────────────────────────────────────────────────────┘
 <TIME> | Refresh <N>s | Sessions: 0 | Commands: 0 | q:quit Tab:switch /:filter
